feat: add support for Add-Reads and SplashScreen-Image manifest attributes
Extends manifest attribute support for jars beyond PR #2439 to handle
Add-Reads module dependencies and SplashScreen-Image extraction.

Changes:
- Add Project.ATTR_ADD_READS and Project.ATTR_SPLASH_SCREEN_IMAGE constants
- Import Add-Reads and SplashScreen-Image attributes from jar manifests
- Process Add-Reads: converts to --add-reads JVM flags (Java 9+)
- Process SplashScreen-Image: extracts image and passes -splash flag
- Fix KeyValue.of() to support values containing '=' signs

Add-Reads implementation:
- Parses space-separated module dependencies (e.g., "mod1=mod2 mod3=mod4")
- Generates --add-reads flags for each dependency pair
- Version-gated for Java 9+ with runAsModule check

SplashScreen-Image implementation:
- Extracts splash image from jar to <jarPath>.splash.<ext> in cache
- Smart caching: only re-extracts if jar is newer than cached image
- Fails gracefully with warnings (never breaks the build)
- Adds -splash:<path> flag before other JVM options

KeyValue parser fix:
- Changed split("=") to split("=", 2) to handle values with '='
- Enables manifest directives like //MANIFEST Add-Reads=mod1=mod2

This builds on PR #2439's copyManifestAttribute() and
addAllUnnamedManifestOptions() patterns.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>